--- a/style.css
+++ b/style.css
@@ -23,6 +23,10 @@ header {
   top: 0;
   z-index: 1000;
 }
+header.scrolled{
+  background-color: aqua;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+}
 
 .logo {
     position:absolute;
