--- a/style.css
+++ b/style.css
@@ -60,6 +60,10 @@ section {
   align-items: center;
   justify-content: center; 
   text-align: center; 
+   background-image: url('./images.jpeg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
 }
 
  #home .overlay {
